data/derived/sp14/progs/unify/prog1109.ml.out
Characters 60-69:
  let fixpoint (f,b) = wwhile(let k x = let y = f x in f x in (x, y!=x), b);;
                                                              ^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
